# Jupiter-project

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  Jupiter Server.cmd  Jupiter UI.cmd  Manual  Manual.md  README.md  VERSION  debug_server.py  global_config.yaml  jupiter-project.jupiter.yaml  jupiter-project.jupiter.yamlold  jupiter.yaml  prompt perso.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.cmd  start.ps1
.github/: copilot-instructions.md
TODOs/: TODO_docs.md  TODO_tests.md  chapter_1.md  phase_7.md  refonte_plugins.md  specs_watch.md  sql_migration_roadmap.md  todo_autodiag.md  todo_meeting_auth.md
changelogs/: CHANGELOG.md  Manual.md  README.md  debug_server.md  docs_api.md  docs_cli_commands_fix_20251203.md  docs_completion_session_20251203.md  docs_index.md  docs_plugin_developer_guide.md  docs_plugin_migration_guide.md  docs_plugins_architecture_20251203.md  docs_validation_20251203.md  jupiter__init__.md  jupiter_api_fix_20251130.md  jupiter_api_response_fix.md  jupiter_autodiag_cleanup_20251202.md  jupiter_ci_update.md  jupiter_cli__init__.md  jupiter_cli_command_handlers.md  jupiter_cli_main.md  jupiter_cli_plugin_commands.md  jupiter_cli_update.md  jupiter_cli_utils.md  jupiter_cli_webui_first.md  jupiter_config__init__.md  jupiter_config_config.md  jupiter_config_fix.md  jupiter_config_naming_20251201.md  jupiter_config_split_fix.md  jupiter_config_syntax_fix.md  jupiter_core__init__.md  jupiter_core_analyzer.md  jupiter_core_autodiag.md  jupiter_core_bridge.md  jupiter_core_bridge_alerting.md  (+131 more)
docs/: api.md  (+18 more)
(+288 files in other folders)
